{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 24,
  "lineage": "76b9f0d5-e133-a611-b8e3-8f34c2549e90",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0eff294e5a02b7e8f",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc"
            },
            "vpc_id": "vpc-08346f62084876264"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:468460113372:internet-gateway/igw-09bc4b7867e434879",
            "id": "igw-09bc4b7867e434879",
            "owner_id": "468460113372",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc"
            },
            "vpc_id": "vpc-08346f62084876264"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0eff294e5a02b7e8f",
            "gateway_id": "",
            "id": "r-rtb-0e41ea2f2ca1fb7d72750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e41ea2f2ca1fb7d7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0eff294e5a02b7e8f",
            "gateway_id": "",
            "id": "r-rtb-0e41ea2f2ca1fb7d72750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e41ea2f2ca1fb7d7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0eff294e5a02b7e8f",
            "gateway_id": "",
            "id": "r-rtb-0e41ea2f2ca1fb7d72750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e41ea2f2ca1fb7d7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09bc4b7867e434879",
            "id": "r-rtb-0551165ccb506f9a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0551165ccb506f9a3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09bc4b7867e434879",
            "id": "r-rtb-0551165ccb506f9a32750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0551165ccb506f9a3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:468460113372:route-table/rtb-0e41ea2f2ca1fb7d7",
            "id": "rtb-0e41ea2f2ca1fb7d7",
            "owner_id": "468460113372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-0eff294e5a02b7e8f",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08346f62084876264"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:468460113372:route-table/rtb-0551165ccb506f9a3",
            "id": "rtb-0551165ccb506f9a3",
            "owner_id": "468460113372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09bc4b7867e434879",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09bc4b7867e434879",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-public"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08346f62084876264"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f223a011a2204b2",
            "route_table_id": "rtb-0e41ea2f2ca1fb7d7",
            "subnet_id": "subnet-0d0092b39768fba07"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cedef02a7415dbb",
            "route_table_id": "rtb-0e41ea2f2ca1fb7d7",
            "subnet_id": "subnet-01298c44e5057c963"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0320aade2de37a6aa",
            "route_table_id": "rtb-0e41ea2f2ca1fb7d7",
            "subnet_id": "subnet-08aa699b41efe37ec"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7b002229f135763",
            "route_table_id": "rtb-0551165ccb506f9a3",
            "subnet_id": "subnet-0bc4cfc5eae648809"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a96c33bb482bbf4e",
            "route_table_id": "rtb-0551165ccb506f9a3",
            "subnet_id": "subnet-0214add1cea9afc7c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b70b0986f57ae66",
            "route_table_id": "rtb-0551165ccb506f9a3",
            "subnet_id": "subnet-086041f9c3ae716f4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:468460113372:subnet/subnet-0d0092b39768fba07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0092b39768fba07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "468460113372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-ap-southeast-2a"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-ap-southeast-2a"
            },
            "vpc_id": "vpc-08346f62084876264"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:468460113372:subnet/subnet-01298c44e5057c963",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01298c44e5057c963",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "468460113372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-ap-southeast-2b"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-ap-southeast-2b"
            },
            "vpc_id": "vpc-08346f62084876264"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:468460113372:subnet/subnet-08aa699b41efe37ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08aa699b41efe37ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "468460113372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-ap-southeast-2c"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-vpc-private-ap-southeast-2c"
            },
            "vpc_id": "vpc-08346f62084876264"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:468460113372:subnet/subnet-0bc4cfc5eae648809",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc4cfc5eae648809",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "468460113372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "overridden-name-public",
              "availability-zone": "ap-southeast-2a"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "overridden-name-public",
              "availability-zone": "ap-southeast-2a"
            },
            "vpc_id": "vpc-08346f62084876264"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:468460113372:subnet/subnet-0214add1cea9afc7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0214add1cea9afc7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "468460113372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "overridden-name-public"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "overridden-name-public"
            },
            "vpc_id": "vpc-08346f62084876264"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:468460113372:subnet/subnet-086041f9c3ae716f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086041f9c3ae716f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "468460113372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "overridden-name-public"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "overridden-name-public"
            },
            "vpc_id": "vpc-08346f62084876264"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:468460113372:vpc/vpc-08346f62084876264",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ce882f5a388c37a",
            "default_route_table_id": "rtb-05908f0eb75703317",
            "default_security_group_id": "sg-0a4693cdb0b3b7483",
            "dhcp_options_id": "dopt-05c27dda1648e36ca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08346f62084876264",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0f1fbdfb182604498",
            "ipv6_cidr_block": "2406:da1c:534:1200::/56",
            "ipv6_cidr_block_network_border_group": "ap-southeast-2",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05908f0eb75703317",
            "owner_id": "468460113372",
            "tags": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpc-name"
            },
            "tags_all": {
              "Example": "ex-vpc",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "vpc-name"
            }
          }
        }
      ]
    }
  ]
}